2004-06-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-css.c: fixed css to break strings on the LAST colon rather than the fist one. This allows namespaces to work once more!!!
	
2004-06-05  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter, rsvg-styles.c: added adobe blending modes, still does not work because of namespace issues
	* rsvg.c: got rid of the whole defs handler thing, it was unnecisarry. Now just use ctx->in_defs for everything.

2004-06-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter: optimised bounding box calculation, optimised colour chanel skipping, made feTile work in some cases (when it is used after another properly modified primitive)
	
2004-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c: fixed bug 139268

2004-05-28  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-css.c: fixed typos in css colour definitions

2004-05-15  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: fixed a bug causing defaults to be messed up when a radial gradient is based on a linear gradient and vice versa
	
2004-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Support automake 1.8
	* */Makefile.am: Add VFS libs
	
2004-05-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Don't pollute the global namespace
	* rsvg-text.h: Ditto
	* rsvg.c: Ditto
	
2004-04-30  Dom Lachowicz <cinamod@hotmail.com>

	* librsvg-2.0.pc.in: Remove bogus dependencies
	
2004-04-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in
	* rsvg-shapes.c: Enable loading remote images
	
2004-04-18  Dodji Seketeli  <dodji@gnome.org>

	* configure.in: use libcroco 0.6.0
	* rsvg-styles.c: 
	(ccss_property): libcroco use CRString now, no GString.

2004-04-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c, rsvg-filter.c: Support data: images in filters
	
2004-04-12  Ross Burton  <ross@burtonini.com>

	* rsvg-shapes.c: Use the correct rowstride when scaling images.
