@@ -28,7 +28,7 @@
 
 #ifdef ENABLE_XEMBED
 #include <gdk/gdkx.h>
-#endif
+#endif /* ENABLE_XEMBED */
 
 #define DEFAULT_WIDTH  240
 #define DEFAULT_HEIGHT 240
@@ -47,7 +47,7 @@ rsvg_window_set_default_icon (GdkPixbuf *icon)
   GList *list;
   
   g_return_if_fail (GDK_IS_PIXBUF (icon));
-
+  
   list = g_list_prepend (NULL, icon);
   gtk_window_set_default_icon_list (list);
   g_list_free (list);
@@ -67,172 +67,231 @@ print_pixbuf (GObject * ignored, gpointer user_data)
 	GtkWidget *gpd;	
 	gint result;
 
-	gpd = gnome_print_dialog_new (gnome_print_job_new(gnome_print_config_default()), _("Print SVG"), 0);
-	gtk_window_set_transient_for(GTK_WINDOW(gpd), GTK_WINDOW(info->window));
+	gpd = gnome_print_dialog_new (gnome_print_job_new (gnome_print_config_default ()), _("Print SVG"), 0);
+	gtk_window_set_transient_for(GTK_WINDOW (gpd), GTK_WINDOW (info->window));
 			  
-	if ((result = gtk_dialog_run (GTK_DIALOG (gpd))) != GNOME_PRINT_DIALOG_RESPONSE_CANCEL) {
-		GnomePrintJob *gpm;
-		GnomePrintContext * gpc;
-		GdkPixbuf * image;
+	if ((result = gtk_dialog_run (GTK_DIALOG (gpd))) != GNOME_PRINT_DIALOG_RESPONSE_CANCEL) 
+		{
+			GnomePrintJob *gpm;
+			GnomePrintContext * gpc;
+			GdkPixbuf * image;
+			
+			gint width, height, rowstride;
+			const guchar * pixels;
+			
+			gdouble page_width, page_height;
+			
+			gpm = gnome_print_job_new (gnome_print_dialog_get_config (GNOME_PRINT_DIALOG(gpd)));
+			gpc = gnome_print_job_get_context (gpm);
+			
+			gnome_print_config_get_page_size (gnome_print_job_get_config (gpm), &page_width, &page_height);		
+			image = info->pixbuf;
+			
+			width     = gdk_pixbuf_get_width (image);
+			height    = gdk_pixbuf_get_height (image);
+			
+			if (width > page_width ||
+				height > page_height) 
+				{
+					struct RsvgSizeCallbackData size_data;
 
-		gint width, height, rowstride;
-		const guchar * pixels;
+					g_message("Scaling the image: (%d %d) => (%g %g)\n", width, height, page_width, page_height);
 
-		gdouble page_width, page_height;
+					/* scale down the image to the page's size, while preserving the aspect ratio */
 
-		gpm = gnome_print_job_new (gnome_print_dialog_get_config (GNOME_PRINT_DIALOG(gpd)));
-		gpc = gnome_print_job_get_context (gpm);
+					if ((double)height * (double)page_width >
+						(double)width * (double)page_height) 
+						{
+							width = 0.5 + (double)width * (double)page_height / (double)height;
+							height = page_height;
+						} 
+					else 
+						{
+							height = 0.5 + (double)height * (double)page_width / (double)width;
+							width = page_width;
+						}
 
-		gnome_print_config_get_page_size (gnome_print_job_get_config (gpm), &page_width, &page_height);		
-		image = info->pixbuf;
+					size_data.type = RSVG_SIZE_WH;
+					size_data.width = width;
+					size_data.height = height;
 
-		width     = gdk_pixbuf_get_width (image);
-		height    = gdk_pixbuf_get_height (image);
-
-		if (width > page_width ||
-			height > page_height) {
-			/* TODO: scale this image to the page's dimensions, preserving the aspect ratio */
-			g_object_ref (G_OBJECT (image));
-		} else {
-			g_object_ref (G_OBJECT (image));
+					image = rsvg_pixbuf_from_data_with_size_data (info->svg_bytes->data, info->svg_bytes->len, &size_data, NULL);
+				} 
+			else 
+				g_object_ref (G_OBJECT (image));
+			
+			rowstride = gdk_pixbuf_get_rowstride (image);
+			pixels    = gdk_pixbuf_get_pixels (image);
+			
+			gnome_print_beginpage(gpc, "1");
+			gnome_print_gsave (gpc);
+			gnome_print_translate (gpc, 0, page_height - height);
+			gnome_print_scale (gpc, width, height);
+			gnome_print_moveto (gpc, 0, 0);
+			
+			gnome_print_rgbaimage (gpc, pixels, width, height, rowstride);
+			
+			gnome_print_grestore (gpc);
+			gnome_print_showpage (gpc);
+			gnome_print_job_close (gpm);
+			
+			if(result == GNOME_PRINT_DIALOG_RESPONSE_PRINT)
+				gnome_print_job_print (gpm);
+			else
+				{
+					GtkWidget * preview;
+					
+					preview = gnome_print_job_preview_new (gpm, _("SVG Print Preview"));
+					gtk_widget_show (GTK_WIDGET (preview));
+				}
+			
+			g_object_unref (G_OBJECT (gpm));
+			g_object_unref (G_OBJECT (image));
 		}
-
-		rowstride = gdk_pixbuf_get_rowstride (image);
-		pixels    = gdk_pixbuf_get_pixels (image);
-
-		gnome_print_beginpage(gpc, "1");
-		gnome_print_gsave (gpc);
-		gnome_print_translate (gpc, 0, page_height - height);
-		gnome_print_scale (gpc, width, height);
-		gnome_print_moveto (gpc, 0, 0);
-
-		gnome_print_rgbaimage (gpc, pixels, width, height, rowstride);
-
-		gnome_print_grestore (gpc);
-		gnome_print_showpage (gpc);
-		gnome_print_job_close (gpm);
-		
-		if(result == GNOME_PRINT_DIALOG_RESPONSE_PRINT)
-			gnome_print_job_print (gpm);
-		else
-			{
-				GtkWidget * preview;
-
-				preview = gnome_print_job_preview_new (gpm, _("SVG Print Preview"));
-				gtk_widget_show (GTK_WIDGET (preview));
-			}
-		
-		g_object_unref (G_OBJECT (gpm));
-		g_object_unref (G_OBJECT (image));
-	}
-
+	
 	gtk_widget_destroy (gpd);
 }
 
-#endif
+#endif /* HAVE_GNOME_PRINT */
 
 static void 
 save_pixbuf (GObject * ignored, gpointer user_data)
 {
 	GtkWidget * filesel;
 	ViewerCbInfo * info = (ViewerCbInfo *)user_data;
-
+	
 	filesel = gtk_file_selection_new (_("Save SVG as PNG"));
 	gtk_window_set_transient_for(GTK_WINDOW(filesel), GTK_WINDOW(info->window));
-
+	
 	if (gtk_dialog_run (GTK_DIALOG (filesel)) == GTK_RESPONSE_OK)
-	{
-		const char * filename;
-
-		filename = gtk_file_selection_get_filename (GTK_FILE_SELECTION (filesel));
-
-		if (filename) {
-			GError * err = NULL;
-
-			if (!gdk_pixbuf_save (info->pixbuf, filename, "png", &err, NULL)) {
-				if (err) {
+		{
+			const char * filename;
+			
+			filename = gtk_file_selection_get_filename (GTK_FILE_SELECTION (filesel));
+			
+			if (filename) 
+				{
+					GError * err = NULL;
+					
+					if (!gdk_pixbuf_save (info->pixbuf, filename, "png", &err, NULL)) 
+						{
+							if (err) 
+								{
+									GtkWidget * errmsg;
+									
+									errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
+																	 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
+																	 GTK_MESSAGE_WARNING,
+																	 GTK_BUTTONS_CLOSE,
+																	 err->message);
+									
+									gtk_dialog_run (GTK_DIALOG (errmsg));
+									
+									g_error_free (err);
+									gtk_widget_destroy (errmsg);
+								}
+						}
+				} 
+			else 
+				{
 					GtkWidget * errmsg;
-
-					errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
-													 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
-													 GTK_MESSAGE_WARNING,
-													 GTK_BUTTONS_CLOSE,
-													 err->message);
-
-					gtk_dialog_run (GTK_DIALOG (errmsg));
-
-					g_error_free (err);
-				}
-			}
-		} else {
-					GtkWidget * errmsg;
-
+					
 					errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
 													 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
 													 GTK_MESSAGE_WARNING,
 													 GTK_BUTTONS_CLOSE,
 													 _("No filename given"));
-
+					
 					gtk_dialog_run (GTK_DIALOG (errmsg));
+					gtk_widget_destroy (errmsg);
+				}
 		}
-	}
 	
 	gtk_widget_destroy (filesel);
 }
-
-#if 0
 
 static void 
 save_svg (GObject * ignored, gpointer user_data)
 {
 	GtkWidget * filesel;
 	ViewerCbInfo * info = (ViewerCbInfo *)user_data;
-
+	
 	filesel = gtk_file_selection_new (_("Save SVG"));
 	gtk_window_set_transient_for(GTK_WINDOW(filesel), GTK_WINDOW(info->window));
 
 	if (gtk_dialog_run (GTK_DIALOG (filesel)) == GTK_RESPONSE_OK)
-	{
-		const char * filename;
+		{
+			const char * filename;
+			
+			filename = gtk_file_selection_get_filename (GTK_FILE_SELECTION (filesel));
+			
+			if (filename) 
+				{
+					FILE * fp;
 
-		filename = gtk_file_selection_get_filename (GTK_FILE_SELECTION (filesel));
+					fp = fopen(filename, "wb");
+					if (!fp) 
+						{
+							GtkWidget * errmsg;
+							
+							errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
+															 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
+															 GTK_MESSAGE_WARNING,
+															 GTK_BUTTONS_CLOSE,
+															 _("Couldn't save %s"),
+															 filename);
+									
+							gtk_dialog_run (GTK_DIALOG (errmsg));
+							gtk_widget_destroy (errmsg);
+						}
+					else
+						{
+							size_t written = 0, remaining = info->svg_bytes->len;
+							const char * buffer = info->svg_bytes->data;
 
-		if (filename) {
-			GError * err = NULL;
+							while (remaining > 0) {
+								written = fwrite (buffer + (info->svg_bytes->len - remaining), 1, 
+												  remaining, fp);
+								if ((written < remaining) && ferror (fp) != 0)
+									{
+										GtkWidget * errmsg;
+										
+										errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
+																		 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
+																		 GTK_MESSAGE_WARNING,
+																		 GTK_BUTTONS_CLOSE,
+																		 _("Couldn't save %s"),
+																		 filename);
+										
+										gtk_dialog_run (GTK_DIALOG (errmsg));
+										gtk_widget_destroy (errmsg);
 
-			/* TODO: save byte array to file */
-			if (0) {
-				if (err) {
+										break;
+									}
+								
+								remaining -= written;
+							}
+
+							fclose(fp);
+						}
+				} 
+			else 
+				{
 					GtkWidget * errmsg;
-
-					errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
-													 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
-													 GTK_MESSAGE_WARNING,
-													 GTK_BUTTONS_CLOSE,
-													 err->message);
-
-					gtk_dialog_run (GTK_DIALOG (errmsg));
-
-					g_error_free (err);
-				}
-			}
-		} else {
-					GtkWidget * errmsg;
-
+					
 					errmsg = gtk_message_dialog_new (GTK_WINDOW(filesel),
 													 GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT,
 													 GTK_MESSAGE_WARNING,
 													 GTK_BUTTONS_CLOSE,
 													 _("No filename given"));
-
+					
 					gtk_dialog_run (GTK_DIALOG (errmsg));
+					gtk_widget_destroy (errmsg);
+				}
 		}
-	}
 	
 	gtk_widget_destroy (filesel);
 }
-
-#endif
 
 static void
 do_popup_menu (GObject * widget, GdkEventButton *event, gpointer user_data)
@@ -240,8 +299,14 @@ do_popup_menu (GObject * widget, GdkEventButton *event, gpointer user_data)
 	GtkWidget * popup_menu;
 	GtkWidget * menu_item;
 	GtkWidget * stock;
-	
+
 	popup_menu = gtk_menu_new ();
+
+	menu_item = gtk_image_menu_item_new_from_stock (GTK_STOCK_SAVE, NULL);
+	g_signal_connect (menu_item, "activate",
+					  G_CALLBACK (save_svg), user_data);
+	gtk_widget_show (menu_item);
+	gtk_menu_shell_append (GTK_MENU_SHELL (popup_menu), menu_item);
 
 	menu_item = gtk_image_menu_item_new_with_label (_("Save as PNG"));
 	stock = gtk_image_new_from_stock (GTK_STOCK_SAVE_AS, GTK_ICON_SIZE_MENU);
@@ -251,15 +316,6 @@ do_popup_menu (GObject * widget, GdkEventButton *event, gpointer user_data)
 					  G_CALLBACK (save_pixbuf), user_data);
 	gtk_widget_show (menu_item);
 	gtk_menu_shell_append (GTK_MENU_SHELL (popup_menu), menu_item);
-
-#if 0
-	/* TODO: save the SVG itself */
-	menu_item = gtk_image_menu_item_new_from_stock (GTK_STOCK_SAVE, NULL);
-	g_signal_connect (menu_item, "activate",
-					  G_CALLBACK (save_svg), user_data);
-	gtk_widget_show (menu_item);
-	gtk_menu_shell_append (GTK_MENU_SHELL (popup_menu), menu_item);
-#endif
 
 #ifdef HAVE_GNOME_PRINT
 	menu_item = gtk_image_menu_item_new_from_stock (GTK_STOCK_PRINT, NULL);
@@ -279,11 +335,11 @@ button_press_event (GObject        *widget,
 					gpointer        user_data)
 {
 	if (event->button == 3 && event->type == GDK_BUTTON_PRESS)
-    {
-		do_popup_menu (widget, event, user_data);
-		return TRUE;
-    }
-
+		{
+			do_popup_menu (widget, event, user_data);
+			return TRUE;
+		}
+	
 	return FALSE;
 }
 
@@ -294,13 +350,12 @@ quit_cb (GtkWidget *win, gpointer unused)
 	gtk_main_quit();
 }
 
-static int
-view_pixbuf (GdkPixbuf * pixbuf, int xid, const char * color)
+static void
+view_pixbuf (ViewerCbInfo * info, int xid, const char * color)
 {
 	GtkWidget *win, *img;
 	gint width, height;
 	GdkColor bg_color;
-	ViewerCbInfo info;
 
 	/* create toplevel window and set its title */
 
@@ -319,8 +374,8 @@ view_pixbuf (GdkPixbuf * pixbuf, int xid, const char * color)
 	else
 		{
 			win = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-			width = MIN(gdk_pixbuf_get_width (pixbuf), DEFAULT_WIDTH) + 20;
-			height = MIN(gdk_pixbuf_get_height (pixbuf), DEFAULT_HEIGHT) + 20;
+			width = MIN(gdk_pixbuf_get_width (info->pixbuf), DEFAULT_WIDTH) + 20;
+			height = MIN(gdk_pixbuf_get_height (info->pixbuf), DEFAULT_HEIGHT) + 20;
 
 			gtk_window_set_title (GTK_WINDOW(win), _("SVG Viewer"));
 		}
@@ -332,13 +387,11 @@ view_pixbuf (GdkPixbuf * pixbuf, int xid, const char * color)
 	g_signal_connect(G_OBJECT(win), "delete_event", G_CALLBACK(quit_cb), NULL);	
 
 	/* create a new image */
-	img = gtk_image_new_from_pixbuf (pixbuf);
+	img = gtk_image_new_from_pixbuf (info->pixbuf);
 
 	/* pack the window with the image */
 	if(xid > 0)
-		{
-			gtk_container_add(GTK_CONTAINER(win), img);
-		}
+		gtk_container_add(GTK_CONTAINER(win), img);
 	else
 		{
 			GtkWidget *scroll;
@@ -363,38 +416,32 @@ view_pixbuf (GdkPixbuf * pixbuf, int xid, const char * color)
 				g_warning (_("Couldn't parse color '%s'"), color);
 		}
 
-	rsvg_window_set_default_icon (pixbuf);
+	rsvg_window_set_default_icon (info->pixbuf);
 
-	info.window = win;
-	info.pixbuf = pixbuf;
-	info.svg_bytes = NULL; /* TODO */
+	info->window = win;
 
 	g_signal_connect (G_OBJECT (win), "button-press-event",
-					  G_CALLBACK(button_press_event), &info);
+					  G_CALLBACK (button_press_event), info);
 	
 	gtk_widget_show_all (win);
 
 #ifdef ENABLE_XEMBED
-	if(xid > 0){
-		XReparentWindow(GDK_WINDOW_XDISPLAY(win->window),
-						GDK_WINDOW_XID(win->window),
-						xid, 0, 0);
-		XMapWindow(GDK_WINDOW_XDISPLAY(win->window),
-				   GDK_WINDOW_XID(win->window));
-	}
+	if(xid > 0)
+		{
+			XReparentWindow (GDK_WINDOW_XDISPLAY( win->window),
+							 GDK_WINDOW_XID (win->window),
+							 xid, 0, 0);
+			XMapWindow (GDK_WINDOW_XDISPLAY (win->window),
+						GDK_WINDOW_XID (win->window));
+		}
 #endif
-
-	/* run the gtk+ main loop */
-	gtk_main ();
-	
-	g_object_unref (G_OBJECT(pixbuf));
-	
-	return 0;
 }
 
 int 
 main (int argc, char **argv)
 {
+	FILE * in;
+	GError * err = NULL;
 	poptContext popt_context;
 	double x_zoom = 1.0;
 	double y_zoom = 1.0;
@@ -407,32 +454,37 @@ main (int argc, char **argv)
 
 	int xid = -1;
 	int from_stdin = 0;
+	ViewerCbInfo info;
 
 	struct RsvgSizeCallbackData size_data;
 
-	struct poptOption options_table[] = {
+	struct poptOption options_table[] = 
+		{
 #ifdef ENABLE_XEMBED
-		{ "xid",         'i',  POPT_ARG_INT,    &xid,         0, _("XWindow ID [for X11 embedding]"), _("<int>") },
+			{ "xid",         'i',  POPT_ARG_INT,    &xid,         0, _("XWindow ID [for X11 embedding]"), _("<int>") },
 #endif
-		{ "stdin",       's',  POPT_ARG_NONE,   &from_stdin,  0, _("Read from stdin instead of a file"), NULL },
-		{ "dpi",         'd',  POPT_ARG_DOUBLE, &dpi,         0, _("Set the # of Pixels Per Inch"), _("<float>") },
-		{ "x-zoom",      'x',  POPT_ARG_DOUBLE, &x_zoom,      0, _("Set the x zoom factor"), _("<float>") },
-		{ "y-zoom",      'y',  POPT_ARG_DOUBLE, &y_zoom,      0, _("Set the y zoom factor"), _("<float>") },
-		{ "width",       'w',  POPT_ARG_INT,    &width,       0, _("Set the image's width"), _("<int>") },
-		{ "height",      'h',  POPT_ARG_INT,    &height,      0, _("Set the image's height"), _("<int>") },
-		{ "bg-color",    'b',  POPT_ARG_STRING, &bg_color,    0, _("Set the image background color (default: transparent)"), _("<string>") },
-		{ "keep-aspect", 'k',  POPT_ARG_NONE,   &bKeepAspect, 0, _("Preserve the image's aspect ratio"), NULL },
-		{ "version",     'v',  POPT_ARG_NONE,   &bVersion,    0, _("Show version information"), NULL },
-		POPT_AUTOHELP
-		POPT_TABLEEND
-	};
+			{ "stdin",       's',  POPT_ARG_NONE,   &from_stdin,  0, _("Read from stdin instead of a file"), NULL },
+			{ "dpi",         'd',  POPT_ARG_DOUBLE, &dpi,         0, _("Set the # of Pixels Per Inch"), _("<float>") },
+			{ "x-zoom",      'x',  POPT_ARG_DOUBLE, &x_zoom,      0, _("Set the x zoom factor"), _("<float>") },
+			{ "y-zoom",      'y',  POPT_ARG_DOUBLE, &y_zoom,      0, _("Set the y zoom factor"), _("<float>") },
+			{ "width",       'w',  POPT_ARG_INT,    &width,       0, _("Set the image's width"), _("<int>") },
+			{ "height",      'h',  POPT_ARG_INT,    &height,      0, _("Set the image's height"), _("<int>") },
+			{ "bg-color",    'b',  POPT_ARG_STRING, &bg_color,    0, _("Set the image background color (default: transparent)"), _("<string>") },
+			{ "keep-aspect", 'k',  POPT_ARG_NONE,   &bKeepAspect, 0, _("Preserve the image's aspect ratio"), NULL },
+			{ "version",     'v',  POPT_ARG_NONE,   &bVersion,    0, _("Show version information"), NULL },
+			POPT_AUTOHELP
+			POPT_TABLEEND
+		};
 	int c;
 	const char * const *args;
 	gint n_args = 0;
-	GdkPixbuf *pixbuf;
     
+	info.pixbuf = NULL;
+	info.svg_bytes = NULL;
+	info.window = NULL;
+
 	popt_context = poptGetContext ("rsvg-view", argc, (const char **)argv, options_table, 0);
-	poptSetOtherOptionHelp(popt_context, _("[OPTIONS...] [file.svg]"));
+	poptSetOtherOptionHelp (popt_context, _("[OPTIONS...] [file.svg]"));
 	
 	c = poptGetNextOpt (popt_context);
 	args = poptGetArgs (popt_context);
@@ -489,17 +541,70 @@ main (int argc, char **argv)
 	size_data.keep_aspect_ratio = bKeepAspect;
 	
 	if(from_stdin)
-		pixbuf = rsvg_pixbuf_from_stdio_file_with_size_data (stdin, &size_data, NULL);
+		in = stdin;
 	else
-		pixbuf = rsvg_pixbuf_from_file_with_size_data (args[0], &size_data, NULL);
+		in = fopen (args[0], "rb");
+
+	if(!in)
+		{
+			g_critical (_("Couldn't open %s\n"), args[0]);
+			poptFreeContext (popt_context);
+
+			return 1;
+		}
+
+	info.svg_bytes = g_byte_array_new ();
+
+	for (;;)
+		{
+			char buf[1024 * 8];
+			size_t nread = fread (buf, 1, sizeof(buf), in);
+			
+			if (nread > 0)
+				g_byte_array_append (info.svg_bytes, buf, nread);
+			
+			if (nread < sizeof (buf))
+				{
+					if (ferror (in))
+						{
+							g_critical (_("Error reading\n"));
+							g_byte_array_free (info.svg_bytes, TRUE);
+							poptFreeContext (popt_context);
+							fclose(in);
+							
+							return 1;
+						}
+					else if (feof(in))
+						break;
+				}
+		}
+	
+	fclose(in);
 
 	poptFreeContext (popt_context);
 
-	if (!pixbuf)
+	info.pixbuf = rsvg_pixbuf_from_data_with_size_data (info.svg_bytes->data, info.svg_bytes->len, &size_data, &err);
+
+	if (!info.pixbuf)
 		{
 			g_critical (_("Error displaying pixbuf!\n"));
+
+			if (err)
+				{
+					g_critical (err->message);
+					g_error_free (err);
+				}
+
 			return 1;
 		}
 	
-	return view_pixbuf (pixbuf, xid, bg_color);   
+	view_pixbuf (&info, xid, bg_color);   
+
+	/* run the gtk+ main loop */
+	gtk_main ();	
+
+	g_object_unref (G_OBJECT (info.pixbuf));
+	g_byte_array_free (info.svg_bytes, TRUE);
+
+	return 0;
 }
